fixed some alignment issues

--- a/week02/styles/large2.css
+++ b/week02/styles/large2.css
@@ -1,46 +1,40 @@
 @media only screen and (min-width: 60em) {
     body {
-        max-width: 1200px;
+        max-width: 100%;
+        
     }
 
-    main {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-    }
-
-    main section:nth-child(3) {
-        grid-column: span 1;
-    }
+    
 
     header {
         background-image: linear-gradient(to top, rgba(255, 255, 255, 0.437), dodgerblue) ;
     }
 
-    header h1, h2 {
-        margin: 10px ;
-        
+    main {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 10px;
+
     }
 
-
-    main h2 {
+    main section:nth-child(3) {
+        grid-column: span 1;
+    }
+    section h2 {
         font-size: 27px;
         text-align: center;
     }
-    main h3{
+    section h3{
         text-align: center;
         font-size: 18px;
     }
 
-    section{
+    section a{
+        display: block;
         text-align: center;
-        margin-left: 30px;
-        margin-bottom: 10px;
-    } 
+    }
 
     section p {
-        text-align: left;
         line-height: 1.5rem;
-        margin-right: auto;
         
     }
     section h2{
@@ -48,14 +42,14 @@
         
         
     }
-    #third img {
-        max-width: 90%;
-        margin: 10px auto;
+    
+    section img {
+        display: block;
+        margin: 0 auto;
+        width: 70%;
     }
 
     footer {
-        margin-right: -30px;
-        margin-bottom: 7px;
         font-size: 18px;
         background-image: linear-gradient(to top, rgba(255, 255, 255, 0.437), dodgerblue);
     }
